fixed top bar visibility in extra study

--- a/src/stylesheets/pages/_session.scss
+++ b/src/stylesheets/pages/_session.scss
@@ -36,7 +36,8 @@
 // session status header
 #stats,
 #summary-button,
-#header-buttons {
+#header-buttons,
+.menu-bar {
     color: $text-color !important;
     z-index: 100 !important;
 
